# ion-flow-tools

./: .gitignore  .ion_token_cache.json  CONTRIBUTING.md  README.md  Setup.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_use.md
diagrams/: robDataFabric_Query.mmd
docs/: robDataFabric_Query.md
ionflow_cli/: cli.py
normalized/: robDataFabric_Query.json
security/: auth.py  iontoken.py  setauth.py
tools/: ai_docgen.py  ai_infor_genai.py  bundle.py  classify_export.py  diagram.py  docgen.py  document_flow.py  extract_embedded.py  git_sync.py  idm_upload.py  import_artifacts.py  locator.py  menu.py  normalize.py  parse_dataflow_xml.py  pdf_export.py  reconstruct_xml.py  validate_bundle.py  workspace.py  workspace_context.py
zzWorkspace/: deploy_bundle.py  diagram.py  docgen.py  enrich.py  exporters.py  ion_client.py  main.py  normalize.py  reconstruct_xml.py
